--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: i sharp 
-        run: yard add sharp
+        run: yarn add sharp
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
