--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: i sharp 
+      - name: install sharp 
         run: yarn add sharp
+        
+      - name: npm sync 
+        run: npm i
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
