--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,11 +49,4 @@ jobs:
         run: npm ci
 
       - name: Build my App
-        run: npm run build && touch ./out/.nojekyll
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: public # The branch the action should deploy to.
-          FOLDER: out # The folder the action should
+        run: npm run build && npm start
